--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,2 +1,3 @@
 /* resources/css/app.css */
-@import '~bootstrap/dist/css/bootstrap.css';
+/* @import '~bootstrap/dist/css/bootstrap.css'; */
+@import '~@fortawesome/fontawesome-free/css/all.min.css';
