--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,3 @@
 /* resources/css/app.css */
-/* @import '~bootstrap/dist/css/bootstrap.css'; */
-@import '~@fortawesome/fontawesome-free/css/all.min.css';
+@import '~bootstrap/dist/css/bootstrap.css';
+@import "~bootstrap-icons/font/bootstrap-icons.css";
