--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,2 @@
-/* resources/css/app.css */
-@import '~bootstrap/dist/css/bootstrap.css';
-@import "~bootstrap-icons/font/bootstrap-icons.css";
+@import '../../node_modules/bootstrap/dist/css/bootstrap.css';
+@import '../../node_modules/bootstrap-icons/font/bootstrap-icons.css';
