--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,9 +1,11 @@
+
 // Fonts
 @import url('https://fonts.bunny.net/css?family=Nunito');
 
 // Variables
 @import 'variables';
+@import "~sweetalert2/src/sweetalert2.scss";
+
 
 // Bootstrap
-@import 'bootstrap/scss/bootstrap';
 @import '~admin-lte/dist/css/adminlte.css';
