--- a/resources/js/components/css/styles.css
+++ b/resources/js/components/css/styles.css
@@ -10,6 +10,16 @@
  overflow: auto;
 }
 
+.hide-on-desktop {
+ display: none;
+}
+
+@media (max-width: 767px) {
+ .hide-on-mobile {
+   display: none;
+ }
+}
+
 @media (max-width: 767.98px) {
 
  .hide-on-mobile-tablet {
