screen preview for screenshot

--- a/resources/js/components/css/styles.css
+++ b/resources/js/components/css/styles.css
@@ -10,6 +10,12 @@
  overflow: auto;
 }
 
+.textarea_speech{
+  width: 100%;
+  height: 100px;
+  margin-top: 10px;
+}
+
 .hide-on-desktop {
  display: none;
 }
