--- a/resources/js/components/css/styles.css
+++ b/resources/js/components/css/styles.css
@@ -10,6 +10,13 @@
  overflow: auto;
 }
 
+.toolbar{
+  background-color: rgba(0, 191, 166, 0.2);
+  color: rgb(5, 32, 29);
+  border: 1px solid rgba(0, 191, 166);
+}
+
+
 .textarea_speech{
   width: 100%;
   height: 100px;
