ayah dropdown in desktop hidden

--- a/resources/js/components/css/styles.css
+++ b/resources/js/components/css/styles.css
@@ -10,6 +10,16 @@
  overflow: auto;
 }
 
+.desktop-hidden {
+  display: block;
+}
+
+@media (min-width: 768px) {
+  .desktop-hidden {
+    display: none;
+  }
+}
+
 .hide-on-desktop {
  display: none;
 }
