--- a/resources/js/components/css/styles.css
+++ b/resources/js/components/css/styles.css
@@ -220,7 +220,7 @@
 
 .card {
  display: flex;
- border: 1px solid #00BFA6;
+ border: 3px solid #00BFA6;
  border-radius: 10px;
 }
 
@@ -235,33 +235,31 @@
  border: 2px solid #00BFA6;
 }
 
-
-/* CSS */
 .button-63 {
-  align-items: center;
+  background-color: #c2fbd7;
+  border-radius: 100px;
   background-image: linear-gradient(144deg,#AF40FF, #5B42F3 50%,#00DDEB);
-  border: 0;
-  border-radius: 7px;
-  box-sizing: border-box;
-  color: #FFFFFF;
-  display: flex;
-  font-family: Phantomsans, sans-serif;
-  font-size: 15px;
-  justify-content: center;
-  line-height: 1em;
-  padding: 15px;
+  color: purple;
+  cursor: pointer;
+  display: inline-block;
+  font-family: CerebriSans-Regular, -apple-system, system-ui, Roboto, sans-serif;
+  padding: 10px 23px;
+  text-align: center;
   text-decoration: none;
+  transition: all 250ms;
+  border: 0;
+  font-size: 16px;
   user-select: none;
   -webkit-user-select: none;
   touch-action: manipulation;
-  white-space: nowrap;
-  cursor: pointer;
-}
+ }
+ 
+ .button-63:hover {
+  background-image: linear-gradient(144deg,#AF40FF, #5B42F3 50%,#00DDEB);
+  transform: scale(1.05) rotate(-1deg);
+ }
 
-.button-63:active,
-.button-63:hover {
-  outline: 0;
-}
+
 
 .shadow-selector {
   margin: 20px;
