--- a/resources/js/components/css/styles.css
+++ b/resources/js/components/css/styles.css
@@ -237,9 +237,9 @@
 
 .button-63 {
   background-color: #c2fbd7;
-  border-radius: 100px;
+  border-radius: 10px;
   background-image: linear-gradient(144deg,#AF40FF, #5B42F3 50%,#00DDEB);
-  color: purple;
+  color: white;
   cursor: pointer;
   display: inline-block;
   font-family: CerebriSans-Regular, -apple-system, system-ui, Roboto, sans-serif;
