--- a/resources/js/components/css/styles.css
+++ b/resources/js/components/css/styles.css
@@ -220,10 +220,7 @@
 
 .card {
  display: flex;
- padding-top: 5px;
- border: 2px solid linear-gradient(144deg,#AF40FF, #5B42F3 50%,#00DDEB);
- border-radius: 10px;
- box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+ border: 1px solid #00BFA6;
 }
 
 .selected {
