--- a/resources/js/components/css/styles.css
+++ b/resources/js/components/css/styles.css
@@ -24,6 +24,15 @@
  display: none;
 }
 
+.custom-offcanvas {
+  background-color: #21ddc7;
+  color: rgb(0, 0, 0);
+ }
+ 
+ .custom-offcanvas .result-item {
+  margin-bottom: 15px;
+ }
+
 @media (max-width: 767px) {
  .hide-on-mobile {
    display: none;
