--- a/public/css/app.css
+++ b/public/css/app.css
@@ -622,7 +622,7 @@ progress {
   color: #6c757d;
 }
 .blockquote-footer::before {
-  content: "— ";
+  content: "â€”Â ";
 }
 .img-fluid {
   max-width: 100%;
