--- a/resources/js/components/css/styles.css
+++ b/resources/js/components/css/styles.css
@@ -265,7 +265,7 @@ audio.custom-audio {
 }
 
 .custom-audio::-webkit-media-controls-timeline-container {
-  background-color: #004d43 !important;
+  background-color: #ebebeb !important;
 }
 
 .custom-audio::-webkit-media-controls-current-time-display,
