--- a/resources/js/components/css/styles.css
+++ b/resources/js/components/css/styles.css
@@ -1,13 +1,13 @@
 .full-screen[data-v-2b3c2c26] {
- position: fixed;
- top: 0;
- left: 0;
- width: 100vw;
- height: 100vh;
- z-index: 9999;
- background: #fff;
- padding: 100px;
- overflow: auto;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  z-index: 9999;
+  background: #fff;
+  padding: 100px;
+  overflow: auto;
 }
 
 .desktop-hidden {
@@ -30,17 +30,9 @@
   transition: background-color 0.3s ease; /* Smooth transition for background */
 }
 
-
-.custom-prev-ayah:hover{
-  color: black;/* Default color */
-  transition: color 0.3s ease; /* Smooth transition */
-}
-.custom-prev-ayah:hover{
-  color: black;/* Default color */
-  transition: color 0.3s ease; /* Smooth transition */
-}
-.custom-last-verse:hover{
-  color: black;/* Default color */
+.custom-prev-ayah:hover,
+.custom-last-verse:hover {
+  color: black; /* Default color */
   transition: color 0.3s ease; /* Smooth transition */
 }
 
@@ -50,82 +42,75 @@
 }
 
 .button-33 {
-  background-color: rgba(0, 191, 166, 0.2);
+  background-color: rgba(0, 191, 166, 0.9);
   color: rgb(255, 255, 255);
   border: 1px solid rgba(0, 191, 166);
 }
 
 .hide-on-desktop {
- display: none;
+  display: none;
 }
 
 .custom-offcanvas {
   background-color: #10584f;
   color: white;
   width: 30%;
- }
+}
 
- 
- .custom-offcanvas .result-item {
+.custom-offcanvas .result-item {
   margin-bottom: 15px;
- }
+}
 
 @media (max-width: 767px) {
- .hide-on-mobile {
-   display: none;
- }
+  .hide-on-mobile {
+    display: none;
+  }
 }
 
 @media (max-width: 767.98px) {
+  .hide-on-mobile-tablet {
+    display: none !important;
+  }
 
- .hide-on-mobile-tablet {
-  display: none !important;
- }
+  .show-on-desktop {
+    display: block !important;
+  }
 
- .show-on-desktop {
-  display: flex !important;
- }
+  .custom-form {
+    border-radius: 5px;
+    overflow-x: hidden; /* Hide horizontal scrollbar */
+  }
 
- .show-on-desktop {
-  display: block;
- }
+  .tab-content {
+    overflow-x: hidden; /* Hide horizontal scrollbar */
+  }
 
- .custom-form {
-  border-radius: 5px;
-  overflow-x: hidden;
-  /* Hide horizontal scrollbar */
- }
+  .icon-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+  }
 
- .tab-content {
-  overflow-x: hidden;
-  /* Hide horizontal scrollbar */
- }
+  .icon-container i {
+    flex: 1;
+    text-align: center;
+  }
 
- .icon-container {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 100%;
- }
-
- .icon-container i {
-  flex: 1;
-  text-align: center;
- }
-
- .dropdown {
-  flex: 1;
-  text-align: center;
- }
+  .dropdown {
+    flex: 1;
+    text-align: center;
+  }
 }
 
 .dropdown-toggle::after {
- display: none !important;
+  display: none !important;
 }
 
 .content-container {
   padding: 20px;
 }
+
 .theme-selector {
   margin-bottom: 20px;
 }
@@ -139,116 +124,104 @@
 }
 
 .flex-container i {
- color: rgb(0, 191, 166);
+  color: rgb(0, 191, 166);
 }
 
 .icon-container {
- display: flex;
- align-items: center;
- justify-content: space-around;
- flex-wrap: nowrap;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  flex-wrap: nowrap;
 }
 
 .icon-row i {
- color: rgb(0, 191, 166);
- cursor: pointer;
- font-size: 1.5rem;
- /* Adjust the font size to ensure icons fit in one line */
+  color: rgb(0, 191, 166);
+  cursor: pointer;
+  font-size: 1.5rem; /* Adjust the font size to ensure icons fit in one line */
 }
 
 .mobile-only {
- display: none;
+  display: none;
 }
 
 @media (max-width: 576px) {
- .flex-container {
-  flex-direction: column;
-  align-items: stretch;
- }
+  .flex-container {
+    flex-direction: column;
+    align-items: stretch;
+  }
 
- .icon-row {
-  display: flex;
-  justify-content: space-between;
- }
+  .icon-row {
+    display: flex;
+    justify-content: space-between;
+  }
 
- .icon-row i {
-  flex: 1;
-  text-align: center;
- }
+  .icon-row i {
+    flex: 1;
+    text-align: center;
+  }
 
- .custom-offcanvas {
-  background-color: #10584f;
-  color: white;
-  color: rgb(0, 0, 0);
-  width: 100%;
- }
-
+  .custom-offcanvas {
+    background-color: #10584f;
+    color: white;
+    width: 100%;
+  }
 }
 
 /* Media query for mobile devices (example: max-width 600px) */
 @media (max-width: 600px) {
-
- .container.text-right,
- .container.text-left {
-  font-size: 1em;
-  /* Equivalent to h6 font size */
- }
+  .container.text-right,
+  .container.text-left {
+    font-size: 1em; /* Equivalent to h6 font size */
+  }
 }
 
 /* Define a media query for full-screen devices */
 @media screen and (min-width: 1024px) {
- .hide-on-full-screen {
-  display: none;
- }
+  .hide-on-full-screen {
+    display: none;
+  }
 }
 
 /* Media query for mobile screens */
 @media screen and (max-width: 768px) {
- .full-screen[data-v-2b3c2c26] {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-  z-index: 9999;
-  background: #fff;
-  padding: 20px;
-  overflow: auto;
- }
+  .full-screen[data-v-2b3c2c26] {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    z-index: 9999;
+    background: #fff;
+    padding: 20px;
+    overflow: auto;
+  }
 
- .mobile-only {
-  display: block;
- }
+  .mobile-only {
+    display: block;
+  }
 
- .hide-on-full-screen {
-  display: none;
- }
+  .hide-on-full-screen {
+    display: none;
+  }
 
- .hide-on-tablet {
-  display: none;
- }
+  .hide-on-tablet {
+    display: unset;
+  }
 
- .container.text-right,
- .container.text-left {
-  font-size: 1.25em;
-  /* Equivalent to h5 font size */
- }
+  .container.text-right,
+  .container.text-left {
+    font-size: 1.25em; /* Equivalent to h5 font size */
+  }
 
- /* Hide the content on mobile devices */
- .hide-on-mobile {
-  display: none;
- }
+  .hide-on-mobile {
+    display: none;
+  }
 
- .hide-on-tablet {
-  display: unset;
- }
-
- .custom-dropdown {
-  max-height: 200px;
-  /* Adjust the value as needed */
-  overflow-y: hidden;
- }
-
+  .custom-dropdown {
+    max-height: 200px;
+    /* Adjust the value as needed */
+    overflow-y: hidden;
+  }
 }
 
 audio.custom-audio {
@@ -296,78 +269,60 @@ audio.custom-audio {
   background-color: #008c7a !important;
 }
 
-
-.custom-prev-ayah:hover{
-  color: black;/* Default color */
-  transition: color 0.3s ease; /* Smooth transition */
-}
-.custom-prev-ayah:hover{
-  color: black;/* Default color */
-  transition: color 0.3s ease; /* Smooth transition */
-}
-.custom-last-verse:hover{
-  color: black;/* Default color */
-  transition: color 0.3s ease; /* Smooth transition */
-}
 .highlight {
   background-color: yellow;
   font-weight: bold;
 }
+
 .result-item {
   border-bottom: 1px solid #ccc;
 }
 
-.button-33 {
-  background-color: rgba(0, 191, 166, 0.2);
-  color: rgb(255, 255, 255);
-  border: 1px solid rgba(0, 191, 166);
-}
 
-.top-toolbar-btn{
-  background-image: linear-gradient(144deg,#AF40FF, #5B42F3 50%,#00DDEB);
 
+.top-toolbar-btn {
+  background-image: linear-gradient(144deg, #AF40FF, #5B42F3 50%, #00DDEB);
 }
 
 .scrollmenu {
- padding-bottom: 10px;
- padding-top: 10px;
- overflow-y: hidden;
- overflow-x: scroll;
- /* Hide horizontal scrollbar */
- white-space: nowrap;
+  padding-bottom: 10px;
+  padding-top: 10px;
+  overflow-y: hidden;
+  overflow-x: scroll; /* Hide horizontal scrollbar */
+  white-space: nowrap;
 }
 
 .scrollmenu a {
- display: inline-block;
- vertical-align: top;
+  display: inline-block;
+  vertical-align: top;
 }
 
 .list-group {
- min-width: 100%;
- background: transparent;
- cursor: pointer;
+  min-width: 100%;
+  background: transparent;
+  cursor: pointer;
 }
 
 .card {
- display: flex;
- border: 2px solid #00BFA6;
+  display: flex;
+  border: 2px solid #00BFA6;
 }
 
 .selected {
- background-color: rgba(0, 191, 166, 0.452);
+  background-color: rgba(0, 191, 166, 0.752);
 }
 
 .custom-scrollbar {
- border-radius: 6px;
- padding: 1rem;
- overflow: scroll;
- border: 2px solid #00BFA6;
+  border-radius: 6px;
+  padding: 1rem;
+  overflow: scroll;
+  border: 2px solid #00BFA6;
 }
 
 .button-63 {
   background-color: #c2fbd7;
   border-radius: 10px;
-  background-image: linear-gradient(144deg,#AF40FF, #5B42F3 50%,#00DDEB);
+  background-image: linear-gradient(144deg, #AF40FF, #5B42F3 50%, #00DDEB);
   color: white;
   cursor: pointer;
   display: inline-block;
@@ -381,13 +336,12 @@ audio.custom-audio {
   user-select: none;
   -webkit-user-select: none;
   touch-action: manipulation;
- }
+}
 
- 
- .button-63:hover {
-  background-image: linear-gradient(144deg,#AF40FF, #5B42F3 50%,#00DDEB);
+.button-63:hover {
+  background-image: linear-gradient(144deg, #AF40FF, #5B42F3 50%, #00DDEB);
   transform: scale(1.05) rotate(-1deg);
- }
+}
 
 .shadow-selector {
   margin: 20px;
@@ -410,17 +364,12 @@ p {
   .button-63:hover {
     outline: 0;
   }
-  
+
   .shadow-selector {
     margin: 20px;
   }
-  
+
   #shadow-dropdown {
     margin: 10px 0;
   }
-  
-  p {
-    margin-top: 20px;
-  }
-  
 }
