--- a/resources/js/components/css/styles.css
+++ b/resources/js/components/css/styles.css
@@ -20,6 +20,13 @@
   }
 }
 
+
+@media (min-width: 768px) {
+  .ayah-dropdown-hidden-on-desktop {
+    display: none;
+  }
+}
+
 .custom-switch {
   position: relative;
   display: inline-block;
